# AndroidNdkDemo

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.h  jvm.cpp  jvm.h
app/src/main/cpp/jni/: jni_access_field.cpp  jni_access_method.cpp  jni_basic_type.cpp  jni_bitmap.cpp  jni_constructor_class.cpp  jni_dynamic_load.cpp  jni_exception.cpp  jni_invoke_method.cpp  jni_product_and_consumer.cpp  jni_reference.cpp  jni_reference_type.cpp  jni_string.cpp  jni_thread.cpp  jni_wait_notify.cpp  native-lib.cpp
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/java/com/example/myapplication/: BaseActivity.java  MainActivity.java
app/src/main/java/com/example/myapplication/base/: JniInvoke.java  JniInvokeActivity.java
app/src/main/java/com/example/myapplication/load/: JNIDynamicLoad.java  JNIDynamicLoadActivity.java
app/src/main/java/com/example/myapplication/utils/: LogUtils.java
app/src/main/java/com/example/ndk/: BaseActivity.java  BottomBarActivity.java  MainActivity.java
app/src/main/java/com/example/ndk/base/: JniInvoke.java  JniInvokeActivity.java
app/src/main/java/com/example/ndk/domain/: Animal.java
app/src/main/java/com/example/ndk/jni/: ICallbackMethod.java  IThreadCallback.java  JniAccessField.java  JniAccessFieldActivity.java  JniAccessMethod.java  JniAccessMethodActivity.java  JniBasicType.java  JniBasicTypeActivity.java  JniBitmap.java  JniBitmapActivity.java  JniConstructorActivity.java  JniConstructorClass.java  JniException.java  JniExceptionActivity.java  JniInvokeMethod.java  JniInvokeMethodActivity.java  JniReference.java  JniReferenceActivity.java  JniReferenceType.java  JniReferenceTypeActivity.java  JniString.java  JniStringActivity.java  JniThread.java  JniThreadActivity.java  JniWaitNotify.java  JniWaitNotifyActivity.java
app/src/main/java/com/example/ndk/load/: JNIDynamicLoad.java  JNIDynamicLoadActivity.java
app/src/main/java/com/example/ndk/utils/: LogUtils.java
app/src/main/res/layout/: activity_bottom_bar.xml  activity_jni_access_field.xml  activity_jni_access_method.xml  activity_jni_basic_type.xml  activity_jni_bitmap.xml  activity_jni_constructor.xml  activity_jni_dynamic_load.xml  activity_jni_exception.xml  activity_jni_invoke.xml  activity_jni_invoke_method.xml  activity_jni_reference.xml  activity_jni_reference_type.xml  activity_jni_string.xml  activity_jni_thread.xml  activity_jni_wait_notify.xml  activity_main.xml
app/src/main/res/menu/: bottom_app_bar.xml
app/src/main/res/values/: dimens.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
